Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127800

Graphs3D namespace docs are missing from QML

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.8.1, 6.8.2, 6.9.0 FF
    • 6.8.0 Beta3
    • Graphs: 3D
    • None
    • 20c6562ec (dev), 13da6f0f3 (6.8), 74445e5fc (6.8.1)

      In C++ side QtGraphs3D is listed in the C++ class list, but it is nowhere to be found on QML side.

        For Gerrit Dashboard: QTBUG-127800
        # Subject Branch Project Status CR V

            tokorpip Tomi Korpipää
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes