Add docs for Graphs3D enums

Pick-to: 6.8.1
Fixes: QTBUG-127800
Fixes: QTBUG-131123
Change-Id: Ia023ed3abc4dbd9f386049282c6c53fabe05e02c
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
(cherry picked from commit 20c6562ecaf688144ccf0bc913688ba9d7073187)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>